--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         </form>
     </div>  
     <div class="container" id="resultContainer">
-        lol
+        
     </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="lib/jquery/jquery-3.1.1.slim.min.js"></script>
+    <script src="lib/jquery/jquery-3.1.1.min.js"></script>
     <script src="lib/tether/tether.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
