--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-        <form>
+        <form id="main-form">
             <div class="form-group">
                 <label for="fio">ФИО</label>
                 <input type="text" class="form-control" id="fio" name="fio" placeholder="Enter your full name">
@@ -21,11 +21,31 @@
             </div>
             <div class="form-group">
                 <label for="phone">Phone</label>
-                <input type="email" class="form-control" id="phone" name="phone" placeholder="Enter your phone number">
+                <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter your phone number">
             </div>
             <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
         </form>
     </div>  
+    <div class="container">
+        <h6>Choose response type for ajaxMock</h6>
+        <div id="actions">
+            <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="errorAction" value="error" checked> Error Response
+                </label>
+            </div>
+            <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="successAction" value="success"> Success Response
+                </label>
+            </div>
+            <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="progressAction" value="progress"> Progress Response
+                </label>
+            </div>
+        </div>
+    </div>
     <div class="container" id="resultContainer">
         
     </div>
