Add styles for result container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+        <style>
+        .success {
+            border: solid 1px black;
+            background: green;
+        }
+
+        .error {
+            border: solid 1px black;
+            background: #f00;
+        }
+
+        .progress {
+            border: solid 1px black;
+            background:cadetblue;
+        }
+    </style>
   </head>
   <body>
     <div class="container">
