Adding styles and content to resultContainer on response

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
         <style>
+        #resultContainer {
+            font-size: .75rem;
+            line-height: 1rem;
+            text-align: center;
+            border-radius: .25rem;
+            display: flex;
+            overflow: hidden;
+            margin-top: 20px;
+            padding: 10px;
+        }
+
         .success {
             border: solid 1px black;
             background: green;
